kustomization/base/mealie/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
spec:
  template:
    spec:
      containers:
        - name: mealie
          image: ghcr.io/mealie-recipes/mealie:v2.5.0
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: mealie-data
              mountPath: /app/data
      volumes:
        - name: mealie-data
          persistentVolumeClaim:
            claimName: mealie-data
