kustomization/base/mealie/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie
spec:
  ingressClassName: traefik
  rules:
    - host: mealie.cindergla.de
      http:
        paths:
          - backend:
              service:
                name: mealie
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - mealie.cindergla.de
